--- a/tipcalculator.html
+++ b/tipcalculator.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,54 +8,82 @@
     <script src="tipcalculator.js" defer></script>
     <link rel="stylesheet" href="tipcalculator.css">
 </head>
+
 <body>
-    <div class="head"><h1 style="color: blue;">TIP CALCULATOR</h1></div>
-    <div class="main">
-        <!-- div to accept input from user -->
-        <div class="box" id="in">
-            <form id="inf">
-                <p class="box1p">Choose Currency</p>
-                <select class="box1p" name="" id="select">
-                    <option selected disabled hidden id="cur">Currency</option>
-                    <option value="&#8358;">Naira</option>
-                    <option value="&#36;">Us Dollar</option>
-                    <option value="&#8364;">Euro</option>
-                    <option value="&#163;">Pound</option>
-                    <option value="&#165;">Japanese Yen</option>
 
-                </select>
-                <p class="box1p">Amount</p>
-                <input type="number" placeholder="Amount" id="amount">
-                <p class="box1p">Tip Percentage</p>
-                <input type="number" placeholder="%" id="percentage">
-                <p class="box1p" min="1">Total Number Of Worker</p>
-                <input type="number" min="1" placeholder="Number Of People" id="people">
-                <div id="buttonWrap">
-                    <button type="button" id="solve" >Calculate</button>
-                    <button id="refresh" onclick="rset()">Reset</button>
-                <!-- you can decide to refresh without function because any button with default "type"
-                will automatically reset the page/form, to try that, try the line below. you can decide to comment the
-                previous reset buttton and corresponding function-->
-                <!-- <button id="refresh">Reset</button> -->
+    <section>
+
+        <div class="head">
+            <h1 id="headText">TIP CALCULATOR</h1>
+        </div>
+
+        <div class="main">
+
+            <!-- div to accept input from user -->
+            <div class="box left">
+
+                <form id="formData">
+                    <div class="formGroup">
+                        <label for="selectCurrency">Choose Currency:</label>
+                        <select class="boxSelect" id="selectCurrency">
+                            <option selected disabled hidden id="currency">Currency</option>
+                            <option value="&#8358;">Naira</option>
+                            <option value="&#36;">Us Dollar</option>
+                            <option value="&#8364;">Euro</option>
+                            <option value="&#163;">Pound</option>
+                            <option value="&#165;">Japanese Yen</option>
+
+                        </select>
+                    </div>
+
+                    <div class="formGroup">
+                        <label for="amount">Amount:</label>
+                        <input type="number" placeholder="Amount" id="amount">
+                    </div>
+
+                    <div class="formGroup">
+                        <label for="percentage">Percentage:</label>
+                        <input type="number" placeholder="%" id="percentage">
+                    </div>
+
+                    <div class="formGroup">
+                        <label for="people">Total Number of Workers:</label>
+                        <input type="number" min="1" placeholder="Number Of People" id="people">
+                    </div>
+
+                    <div id="buttonWrap">
+                        <button type="button" id="solve">Calculate</button>
+                        <button id="refresh" onclick="rset()">Reset</button>
+                    </div>
+
+                </form>
+
+            </div>
+
+            <!-- div to display output on the client-side (computer) -->
+            <div class="box right">
+                <div class="output">
+                    <p class="outputTag">Service Amount:</p>
+                    <p id="outputAmount">0</p>
                 </div>
-            </form>
+                <div class="output">
+                    <p class="outputTag">Tip Amount:</p>
+                    <p id="tipAmount">0</p>
+                </div>
+                <div class="output">
+                    <p class="outputTag">Total Amount To Pay:</p>
+                    <p id="totalAmt">0</p>
+                </div>
+                <div class="output">
+                    <p class="outputTag">Tip per person:</p>
+                    <p id="perPerson">0</p>
+                </div>
+            </div>
+
         </div>
 
-        <!-- div to display output by the computer -->
-        <div class="box" id="out">
-            <div class="out">
-                <p class="boxp">Service Amount:</p>
-                <p id="outAmount">0</p></div>
-            <div class="out">
-                <p class="boxp">Tip Amount:</p>
-                <p id="tamount">0</p></div>
-            <div class="out">
-                <p class="boxp">Total Amount To Pay:</p>
-                <p id="total">0</p> </div>
-            <div class="out">
-                <p class="boxp">Tip per person:</p>
-                <p id="per">0</p></div>
-        </div>
-    </div>
+    </section>
+
 </body>
+
 </html>
